# nanogpt

./: .gitignore  CHANGELOG.md  README.md  all-checks.sh  check.sh  health.sh  pyproject.toml  renovate-check.sh  renovate.json  train.py
src/: __init__.py  model.py
tests/: __init__.py  test_model.py  test_train.py
